--- a/MENU2.html
+++ b/MENU2.html
@@ -11,14 +11,15 @@
 </center>
 
 <font face="Arial" size="16" color="White">
-<p>Haz click en los enlaces para cargar la p·gina en el recuadro de la izquierda.</p>
+<p>Haz click en los enlaces para cargar la p√°gina en el recuadro de la izquierda.</p>
 
 <ul>
-  <li><a href="https://alejandrocm-cloud.github.io/base/BASE.html" target="visor">P·gina 1</a></li>
+  <li><a href="https://alejandrocm-cloud.github.io/base/BASE.html" target="visor">Pagina 1</a></li>
   <li><a href="https://alejandrocm-cloud.github.io/" target="visor">Enlace 1</a></li>
   <li><a href="https://alejandrocm-cloud.github.io/paginas-web-favoritas/index2.html" target="visor">Enlace 2</a></li>
   <li><a href="https://pointerpointer.com/" target="visor">Pagina Extra</a></li>
 </ul>
 </font>
 </body>
+
 </html>
